# higgs_solver

./: .gitignore  LICENSE  README.md  Setup.py  pyproject.toml  setup.py
src/higgs_solver/: __init__.py  board.py  logic.py  particle.py  protocol.py  solver.py
tests/: test_filter.py
