[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "higgs_solver"
authors = [
    {name = "Growing Mycelium", email = "theseriouslyunknownsnake@gmail.com"},
]
description = "Solves the upcoming game Agent Higgs 2 (insert link here)"
readme = "README.md"  # maybe learn .rst one day?
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["testtubegames", "higgs agent", "solver"]
dependencies = [
    'tomli; python_version < "3.11"',
]
dynamic = ["version", "classifiers"]

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/Why-not-now/higgs_solver"

# [project.scripts]
# realpython = "reader.__main__:main"