[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "higgs_solver"
version = "0.0.0"
authors = [
    {name = "Growing Mycelium", email = "theseriouslyunknownsnake@gmail.com"},
]
description = "Solves the upcoming game Agent Higgs 2 (insert link here)"
readme = "README.md"  # maybe learn .rst one day?
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["testtubegames", "higgs agent", "solver"]
dependencies = [
    'tomli; python_version < "3.11"',
]

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/Why-not-now/higgs_solver"

# [project.scripts]
# realpython = "reader.__main__:main"