[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "higgs_solver"
version = "0.0.1a1"
authors = [
    {name = "Growing Mycelium", email = "theseriouslyunknownsnake@gmail.com"},
]
description = "Solves the upcoming game Agent Higgs 2 (insert link here)"
readme = "README.md"  # maybe learn .rst one day?
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["testtubegames", "higgs agent", "solver"]
dependencies = [
    'tomli; python_version < "3.11"',
    'attrs'
]

[project.optional-dependencies]
dev = ["autopep8", "mypy", "flake8", "pycodestyle", "pylint", "bumpver", "isort", "pip-tools", "pytest", "check-manifest"]

[project.urls]
Homepage = "https://github.com/Why-not-now/higgs_solver"

# [project.scripts]
# realpython = "reader.__main__:main"

[tool.bumpver]
current_version = "0.0.1a1"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
